// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/watchlist/writers) can filter by name 1`] = `
<ul
  class="listCss"
  data-testid="writers-list"
>
  <li
    class="listItemCss"
  >
    <a
      class="listItemLinkCss"
      href="/watchlist/writers/clive-barker/"
    >
      <div
        class="gatsby-image-wrapper gatsby-image-wrapper-constrained listItemAvatarCss"
        data-gatsby-image-wrapper=""
        style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
      >
        <div
          style="max-width: 174px; display: block;"
        >
          <img
            alt=""
            aria-hidden="true"
            role="presentation"
            src="data:image/svg+xml;charset=utf-8,%3Csvg height='174' width='174' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
            style="max-width: 100%; display: block; position: static;"
          />
        </div>
        <img
          alt=""
          aria-hidden="true"
          data-placeholder-image=""
          decoding="async"
          src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='174'%20height='174'%20viewBox='0%200%20174%20174'%20preserveAspectRatio='none'%3e%3cpath%20d='M0%2087v87h175V87c0-48-1-69-1-45v42l-4%202c-4%204-8%2010-8%2013l-2%2014a278%20278%200%2000-6%2033l-6-1c-5-1-7-1-12%201-1%201-3%200-6-5l-5-6-2%204-3%203-6%204c-6%204-6%204-11%201-5-2-5-2-5%200%200%204-4%202-7-5-3-5-1-6%205-5%205%200%206-2%202-4l-1-1c2%200%201-2-1-2v-1c2%200%202%200%201-1-1-2%208-5%2012-4h2c-1-1-7-2-9-1-1%201-8-1-8-2l4-6%205-4-3-5-2-11c0-7-2-14-6-18-3-3-16-7-19-6-2%200-3%200-3-5s1-7%203-3l2%201c2%200%202%200%201-2v-4l-1-1c-1%200-2-1-1-2h-1l-1%201c-1-6%200-8%201-10l1-3c-3-4%2012-8%2026-8%2019%201%2026%209%2028%2032%201%2018%203%2024%204%2020l2-2%203-4c1-4%202-5%204-5s3-2%202-4c-2-2-2-7-1-14V48l-2-9%201-1c-1-3%200-2%204%201%201%202%203%203%203%202l1%201h1c1-2%201-2%202%200v9c1%202%202%201%202-6%201-4%203-9%206-11%202-1%202-2%202-6-1-5-1-5-7-2l-8%203-5%202-3%202-4-3-7-6-7-4c-3%200-4-1-4-2%200-2-2-3-4-4-5-3-5-3%203-3l34-2h13l1-3c4-7%207-6-45-6a9172%209172%200%2000-84%200H0v87m112-16l-6%203c-2%201-2%201%200%202%202%200%202%201%201%203%200%202%200%202%203%201h3c3%200%204%200%203%201%200%202%205%203%206%202%202-1-1-6-4-8-2-1-2-1%202-1l5-1-4-1c-4-2-4-2-9-1M75%2083c-2%201-1%207%201%208%201%201%201%201-1%201-4%200-6%209-3%2011l3%207%201%206c1-1%204%203%205%206%200%204%202%203%202-2-1-2%200-3%201-3%203%201%205-2%203-4v-8c1-13%201-17-1-19-1-1-2-2-3-1-1%202-4%201-4-1s-2-3-4-1m-48%2034c-1%201-5%202-14%202-5%200-12%2012-9%2014l4%208c9%2020%2020%2028%2032%2022l8-2c4%200%204%200%200-7l-4-15c-1-10-3-16-6-17l-4-3c-3-3-5-4-7-2m29%209a283%20283%200%20001%209v6l1%201-1%201v1l-1%201h-1l1%202v2c-2%201%201%203%204%203%204%200%204%200%201-14l-4-14h-1v2'%20fill='%23d3d3d3'%20fill-rule='evenodd'/%3e%3c/svg%3e"
          style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
        />
        <picture>
          <source
            data-srcset="/static/5779e9401c86d1d76fa35058fee5985b/7bfee/clive-barker.avif 130w,/static/5779e9401c86d1d76fa35058fee5985b/6c904/clive-barker.avif 162w,/static/5779e9401c86d1d76fa35058fee5985b/eba7c/clive-barker.avif 174w,/static/5779e9401c86d1d76fa35058fee5985b/fcfdf/clive-barker.avif 260w,/static/5779e9401c86d1d76fa35058fee5985b/ef9e4/clive-barker.avif 324w,/static/5779e9401c86d1d76fa35058fee5985b/51863/clive-barker.avif 348w"
            sizes="(max-width: 487) 174px,  (max-width: 1279px) 162px, (max-width: 1291px) 174px, 130px"
            type="image/avif"
          />
          <img
            alt="An image of Clive Barker"
            data-gatsby-image-ssr=""
            data-main-image=""
            data-src="/static/5779e9401c86d1d76fa35058fee5985b/141a0/clive-barker.jpg"
            data-srcset="/static/5779e9401c86d1d76fa35058fee5985b/02079/clive-barker.jpg 130w,/static/5779e9401c86d1d76fa35058fee5985b/b488b/clive-barker.jpg 162w,/static/5779e9401c86d1d76fa35058fee5985b/141a0/clive-barker.jpg 174w,/static/5779e9401c86d1d76fa35058fee5985b/c8b07/clive-barker.jpg 260w,/static/5779e9401c86d1d76fa35058fee5985b/f85c2/clive-barker.jpg 324w,/static/5779e9401c86d1d76fa35058fee5985b/5aeb4/clive-barker.jpg 348w"
            decoding="async"
            loading="lazy"
            sizes="(max-width: 487) 174px,  (max-width: 1279px) 162px, (max-width: 1291px) 174px, 130px"
            style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
          />
        </picture>
        <noscript />
        <script
          type="module"
        >
          const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
        </script>
      </div>
    </a>
    <div
      class="listItemTitleCss"
    >
      <a
        href="/watchlist/writers/clive-barker/"
      >
        Clive Barker
      </a>
    </div>
    <a
      class="progressRingCss"
      href="/watchlist/writers/clive-barker/"
    >
      <svg
        viewBox="0 0 36 36"
      >
        <path
          class="percentBackgroundCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
        />
        <path
          class="percentProgressCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
          stroke-dasharray="16, 100"
        />
      </svg>
    </a>
    <div
      class="progressStatsCss"
    >
      2
       / 
      12
    </div>
  </li>
</ul>
`;

exports[`/watchlist/writers) can sort by name 1`] = `
<ul
  class="listCss"
  data-testid="writers-list"
>
  <li
    class="listItemCss"
  >
    <svg
      class="listItemAvatarCss defaultImageCss"
      fill="currentColor"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="listItemTitleCss"
    >
      Anthony Shaffer
    </div>
    <div
      class="progressRingCss"
    >
      <svg
        viewBox="0 0 36 36"
      >
        <path
          class="percentBackgroundCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
        />
        <path
          class="percentProgressCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
          stroke-dasharray="0, 100"
        />
      </svg>
    </div>
    <div
      class="progressStatsCss"
    >
      0
       / 
      12
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <a
      class="listItemLinkCss"
      href="/watchlist/writers/clive-barker/"
    >
      <div
        class="gatsby-image-wrapper gatsby-image-wrapper-constrained listItemAvatarCss"
        data-gatsby-image-wrapper=""
        style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
      >
        <div
          style="max-width: 174px; display: block;"
        >
          <img
            alt=""
            aria-hidden="true"
            role="presentation"
            src="data:image/svg+xml;charset=utf-8,%3Csvg height='174' width='174' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
            style="max-width: 100%; display: block; position: static;"
          />
        </div>
        <img
          alt=""
          aria-hidden="true"
          data-placeholder-image=""
          decoding="async"
          src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='174'%20height='174'%20viewBox='0%200%20174%20174'%20preserveAspectRatio='none'%3e%3cpath%20d='M0%2087v87h175V87c0-48-1-69-1-45v42l-4%202c-4%204-8%2010-8%2013l-2%2014a278%20278%200%2000-6%2033l-6-1c-5-1-7-1-12%201-1%201-3%200-6-5l-5-6-2%204-3%203-6%204c-6%204-6%204-11%201-5-2-5-2-5%200%200%204-4%202-7-5-3-5-1-6%205-5%205%200%206-2%202-4l-1-1c2%200%201-2-1-2v-1c2%200%202%200%201-1-1-2%208-5%2012-4h2c-1-1-7-2-9-1-1%201-8-1-8-2l4-6%205-4-3-5-2-11c0-7-2-14-6-18-3-3-16-7-19-6-2%200-3%200-3-5s1-7%203-3l2%201c2%200%202%200%201-2v-4l-1-1c-1%200-2-1-1-2h-1l-1%201c-1-6%200-8%201-10l1-3c-3-4%2012-8%2026-8%2019%201%2026%209%2028%2032%201%2018%203%2024%204%2020l2-2%203-4c1-4%202-5%204-5s3-2%202-4c-2-2-2-7-1-14V48l-2-9%201-1c-1-3%200-2%204%201%201%202%203%203%203%202l1%201h1c1-2%201-2%202%200v9c1%202%202%201%202-6%201-4%203-9%206-11%202-1%202-2%202-6-1-5-1-5-7-2l-8%203-5%202-3%202-4-3-7-6-7-4c-3%200-4-1-4-2%200-2-2-3-4-4-5-3-5-3%203-3l34-2h13l1-3c4-7%207-6-45-6a9172%209172%200%2000-84%200H0v87m112-16l-6%203c-2%201-2%201%200%202%202%200%202%201%201%203%200%202%200%202%203%201h3c3%200%204%200%203%201%200%202%205%203%206%202%202-1-1-6-4-8-2-1-2-1%202-1l5-1-4-1c-4-2-4-2-9-1M75%2083c-2%201-1%207%201%208%201%201%201%201-1%201-4%200-6%209-3%2011l3%207%201%206c1-1%204%203%205%206%200%204%202%203%202-2-1-2%200-3%201-3%203%201%205-2%203-4v-8c1-13%201-17-1-19-1-1-2-2-3-1-1%202-4%201-4-1s-2-3-4-1m-48%2034c-1%201-5%202-14%202-5%200-12%2012-9%2014l4%208c9%2020%2020%2028%2032%2022l8-2c4%200%204%200%200-7l-4-15c-1-10-3-16-6-17l-4-3c-3-3-5-4-7-2m29%209a283%20283%200%20001%209v6l1%201-1%201v1l-1%201h-1l1%202v2c-2%201%201%203%204%203%204%200%204%200%201-14l-4-14h-1v2'%20fill='%23d3d3d3'%20fill-rule='evenodd'/%3e%3c/svg%3e"
          style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
        />
        <picture>
          <source
            data-srcset="/static/5779e9401c86d1d76fa35058fee5985b/7bfee/clive-barker.avif 130w,/static/5779e9401c86d1d76fa35058fee5985b/6c904/clive-barker.avif 162w,/static/5779e9401c86d1d76fa35058fee5985b/eba7c/clive-barker.avif 174w,/static/5779e9401c86d1d76fa35058fee5985b/fcfdf/clive-barker.avif 260w,/static/5779e9401c86d1d76fa35058fee5985b/ef9e4/clive-barker.avif 324w,/static/5779e9401c86d1d76fa35058fee5985b/51863/clive-barker.avif 348w"
            sizes="(max-width: 487) 174px,  (max-width: 1279px) 162px, (max-width: 1291px) 174px, 130px"
            type="image/avif"
          />
          <img
            alt="An image of Clive Barker"
            data-gatsby-image-ssr=""
            data-main-image=""
            data-src="/static/5779e9401c86d1d76fa35058fee5985b/141a0/clive-barker.jpg"
            data-srcset="/static/5779e9401c86d1d76fa35058fee5985b/02079/clive-barker.jpg 130w,/static/5779e9401c86d1d76fa35058fee5985b/b488b/clive-barker.jpg 162w,/static/5779e9401c86d1d76fa35058fee5985b/141a0/clive-barker.jpg 174w,/static/5779e9401c86d1d76fa35058fee5985b/c8b07/clive-barker.jpg 260w,/static/5779e9401c86d1d76fa35058fee5985b/f85c2/clive-barker.jpg 324w,/static/5779e9401c86d1d76fa35058fee5985b/5aeb4/clive-barker.jpg 348w"
            decoding="async"
            loading="lazy"
            sizes="(max-width: 487) 174px,  (max-width: 1279px) 162px, (max-width: 1291px) 174px, 130px"
            style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
          />
        </picture>
        <noscript />
        <script
          type="module"
        >
          const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
        </script>
      </div>
    </a>
    <div
      class="listItemTitleCss"
    >
      <a
        href="/watchlist/writers/clive-barker/"
      >
        Clive Barker
      </a>
    </div>
    <a
      class="progressRingCss"
      href="/watchlist/writers/clive-barker/"
    >
      <svg
        viewBox="0 0 36 36"
      >
        <path
          class="percentBackgroundCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
        />
        <path
          class="percentProgressCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
          stroke-dasharray="16, 100"
        />
      </svg>
    </a>
    <div
      class="progressStatsCss"
    >
      2
       / 
      12
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <svg
      class="listItemAvatarCss defaultImageCss"
      fill="currentColor"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="listItemTitleCss"
    >
      David Mamet
    </div>
    <div
      class="progressRingCss"
    >
      <svg
        viewBox="0 0 36 36"
      >
        <path
          class="percentBackgroundCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
        />
        <path
          class="percentProgressCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
          stroke-dasharray="0, 100"
        />
      </svg>
    </div>
    <div
      class="progressStatsCss"
    >
      0
       / 
      26
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <a
      class="listItemLinkCss"
      href="/watchlist/writers/leigh-brackett/"
    >
      <div
        class="gatsby-image-wrapper gatsby-image-wrapper-constrained listItemAvatarCss"
        data-gatsby-image-wrapper=""
        style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
      >
        <div
          style="max-width: 174px; display: block;"
        >
          <img
            alt=""
            aria-hidden="true"
            role="presentation"
            src="data:image/svg+xml;charset=utf-8,%3Csvg height='174' width='174' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
            style="max-width: 100%; display: block; position: static;"
          />
        </div>
        <img
          alt=""
          aria-hidden="true"
          data-placeholder-image=""
          decoding="async"
          src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='174'%20height='174'%20viewBox='0%200%20174%20174'%20preserveAspectRatio='none'%3e%3cpath%20d='M0%2087v87h30c29%200%2030%200%2029-2v-9l3-5c1-6%202-4%203%204l2%209%201%202%2019%201c20%200%2019%200%2019-4l6-9%206-7h-5c-12%202-16%201-23-8-4-5-5-6-7-5-4%201-11-11-9-15%202-2%202-3-2-7l-6-9-4-5c-1%200-3-5-3-10l1-4%201-1c0-2%201-1%204%200l4%202%204-2c3-2%205-3%208-3%204%200%205-1%204-2%200-3-6-3-14%201-7%203-10%203-6%200%203-2%203-2%201-5-1-1-2-2-3-1s-2%200-3-7l-3-10v-5l7-12%204-2c2-2%203-3%2012-3l5-1c1%200-1-5-4-8l-1-2-1-4%201-2v-2c-2-3-1-3%202-1%203%203%205%202%204-1-1-1%200-3%201-4l1-2%202-1c2%200%202%200%201%201-1%202-3%208-2%209l1%205v2c-1-2-4-3-4-1l4%204c4%204%205%204%2013%204%2010%201%2011%201%2016%209l5%206s2%204%202%209l5%2013c5%2012%207%2048%202%2057l-2%205%203%202c2%202%203%203%203%205l1%202%202%201c2%202%202%202-1%206-1%203-3%206-5%207l-2%205-2%202-2%203c0%201-1%203-3%203-2%202%200%202%2024%202h26V0H0v87M83%209l-3%202-2%202c-1%203-5%203-8%200-2-2-3-2-1%201l-4%202c-5%201-7%205-5%208%202%201%202%201%206-1l7-3%202-1h1l2-2c1-4%203-4%204-2%202%202%202%202%204-1l1-3v-1l-1-1-2-1-1%201m6%20102c-3%206-4%209-2%207%201-1%203-2%203-4l3-2%205%201c3%200%205%201%205%202l10-4-11-1-8-2c-3-2-3-2-5%203m5%2012l-7%201c-1-1-2%200-3%201-1%203-1%204%202%204%204%200%208%202%207%203%200%201%206%204%2010%204%205%200%206-2%202-3-4%200-6-2-3-2l1-1h-4c-3%200-6-3-5-4l11-2%204-1H94'%20fill='%23d3d3d3'%20fill-rule='evenodd'/%3e%3c/svg%3e"
          style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
        />
        <picture>
          <source
            data-srcset="/static/fdee0eb395441086c02be1d83329e6a0/7bfee/leigh-brackett.avif 130w,/static/fdee0eb395441086c02be1d83329e6a0/6c904/leigh-brackett.avif 162w,/static/fdee0eb395441086c02be1d83329e6a0/eba7c/leigh-brackett.avif 174w,/static/fdee0eb395441086c02be1d83329e6a0/fcfdf/leigh-brackett.avif 260w,/static/fdee0eb395441086c02be1d83329e6a0/ef9e4/leigh-brackett.avif 324w,/static/fdee0eb395441086c02be1d83329e6a0/51863/leigh-brackett.avif 348w"
            sizes="(max-width: 487) 174px,  (max-width: 1279px) 162px, (max-width: 1291px) 174px, 130px"
            type="image/avif"
          />
          <img
            alt="An image of Leigh Brackett"
            data-gatsby-image-ssr=""
            data-main-image=""
            data-src="/static/fdee0eb395441086c02be1d83329e6a0/141a0/leigh-brackett.jpg"
            data-srcset="/static/fdee0eb395441086c02be1d83329e6a0/02079/leigh-brackett.jpg 130w,/static/fdee0eb395441086c02be1d83329e6a0/b488b/leigh-brackett.jpg 162w,/static/fdee0eb395441086c02be1d83329e6a0/141a0/leigh-brackett.jpg 174w,/static/fdee0eb395441086c02be1d83329e6a0/c8b07/leigh-brackett.jpg 260w,/static/fdee0eb395441086c02be1d83329e6a0/f85c2/leigh-brackett.jpg 324w,/static/fdee0eb395441086c02be1d83329e6a0/5aeb4/leigh-brackett.jpg 348w"
            decoding="async"
            loading="lazy"
            sizes="(max-width: 487) 174px,  (max-width: 1279px) 162px, (max-width: 1291px) 174px, 130px"
            style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
          />
        </picture>
        <noscript />
        <script
          type="module"
        >
          const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
        </script>
      </div>
    </a>
    <div
      class="listItemTitleCss"
    >
      <a
        href="/watchlist/writers/leigh-brackett/"
      >
        Leigh Brackett
      </a>
    </div>
    <a
      class="progressRingCss"
      href="/watchlist/writers/leigh-brackett/"
    >
      <svg
        viewBox="0 0 36 36"
      >
        <path
          class="percentBackgroundCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
        />
        <path
          class="percentProgressCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
          stroke-dasharray="8, 100"
        />
      </svg>
    </a>
    <div
      class="progressStatsCss"
    >
      1
       / 
      12
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <svg
      class="listItemAvatarCss defaultImageCss"
      fill="currentColor"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="listItemTitleCss"
    >
      Neil LaBute
    </div>
    <div
      class="progressRingCss"
    >
      <svg
        viewBox="0 0 36 36"
      >
        <path
          class="percentBackgroundCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
        />
        <path
          class="percentProgressCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
          stroke-dasharray="0, 100"
        />
      </svg>
    </div>
    <div
      class="progressStatsCss"
    >
      0
       / 
      10
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <svg
      class="listItemAvatarCss defaultImageCss"
      fill="currentColor"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="listItemTitleCss"
    >
      Raymond Chandler
    </div>
    <div
      class="progressRingCss"
    >
      <svg
        viewBox="0 0 36 36"
      >
        <path
          class="percentBackgroundCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
        />
        <path
          class="percentProgressCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
          stroke-dasharray="0, 100"
        />
      </svg>
    </div>
    <div
      class="progressStatsCss"
    >
      0
       / 
      15
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <svg
      class="listItemAvatarCss defaultImageCss"
      fill="currentColor"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="listItemTitleCss"
    >
      Stephen King
    </div>
    <div
      class="progressRingCss"
    >
      <svg
        viewBox="0 0 36 36"
      >
        <path
          class="percentBackgroundCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
        />
        <path
          class="percentProgressCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
          stroke-dasharray="0, 100"
        />
      </svg>
    </div>
    <div
      class="progressStatsCss"
    >
      0
       / 
      57
    </div>
  </li>
</ul>
`;

exports[`/watchlist/writers) can sort by review count 1`] = `
<ul
  class="listCss"
  data-testid="writers-list"
>
  <li
    class="listItemCss"
  >
    <a
      class="listItemLinkCss"
      href="/watchlist/writers/clive-barker/"
    >
      <div
        class="gatsby-image-wrapper gatsby-image-wrapper-constrained listItemAvatarCss"
        data-gatsby-image-wrapper=""
        style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
      >
        <div
          style="max-width: 174px; display: block;"
        >
          <img
            alt=""
            aria-hidden="true"
            role="presentation"
            src="data:image/svg+xml;charset=utf-8,%3Csvg height='174' width='174' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
            style="max-width: 100%; display: block; position: static;"
          />
        </div>
        <img
          alt=""
          aria-hidden="true"
          data-placeholder-image=""
          decoding="async"
          src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='174'%20height='174'%20viewBox='0%200%20174%20174'%20preserveAspectRatio='none'%3e%3cpath%20d='M0%2087v87h175V87c0-48-1-69-1-45v42l-4%202c-4%204-8%2010-8%2013l-2%2014a278%20278%200%2000-6%2033l-6-1c-5-1-7-1-12%201-1%201-3%200-6-5l-5-6-2%204-3%203-6%204c-6%204-6%204-11%201-5-2-5-2-5%200%200%204-4%202-7-5-3-5-1-6%205-5%205%200%206-2%202-4l-1-1c2%200%201-2-1-2v-1c2%200%202%200%201-1-1-2%208-5%2012-4h2c-1-1-7-2-9-1-1%201-8-1-8-2l4-6%205-4-3-5-2-11c0-7-2-14-6-18-3-3-16-7-19-6-2%200-3%200-3-5s1-7%203-3l2%201c2%200%202%200%201-2v-4l-1-1c-1%200-2-1-1-2h-1l-1%201c-1-6%200-8%201-10l1-3c-3-4%2012-8%2026-8%2019%201%2026%209%2028%2032%201%2018%203%2024%204%2020l2-2%203-4c1-4%202-5%204-5s3-2%202-4c-2-2-2-7-1-14V48l-2-9%201-1c-1-3%200-2%204%201%201%202%203%203%203%202l1%201h1c1-2%201-2%202%200v9c1%202%202%201%202-6%201-4%203-9%206-11%202-1%202-2%202-6-1-5-1-5-7-2l-8%203-5%202-3%202-4-3-7-6-7-4c-3%200-4-1-4-2%200-2-2-3-4-4-5-3-5-3%203-3l34-2h13l1-3c4-7%207-6-45-6a9172%209172%200%2000-84%200H0v87m112-16l-6%203c-2%201-2%201%200%202%202%200%202%201%201%203%200%202%200%202%203%201h3c3%200%204%200%203%201%200%202%205%203%206%202%202-1-1-6-4-8-2-1-2-1%202-1l5-1-4-1c-4-2-4-2-9-1M75%2083c-2%201-1%207%201%208%201%201%201%201-1%201-4%200-6%209-3%2011l3%207%201%206c1-1%204%203%205%206%200%204%202%203%202-2-1-2%200-3%201-3%203%201%205-2%203-4v-8c1-13%201-17-1-19-1-1-2-2-3-1-1%202-4%201-4-1s-2-3-4-1m-48%2034c-1%201-5%202-14%202-5%200-12%2012-9%2014l4%208c9%2020%2020%2028%2032%2022l8-2c4%200%204%200%200-7l-4-15c-1-10-3-16-6-17l-4-3c-3-3-5-4-7-2m29%209a283%20283%200%20001%209v6l1%201-1%201v1l-1%201h-1l1%202v2c-2%201%201%203%204%203%204%200%204%200%201-14l-4-14h-1v2'%20fill='%23d3d3d3'%20fill-rule='evenodd'/%3e%3c/svg%3e"
          style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
        />
        <picture>
          <source
            data-srcset="/static/5779e9401c86d1d76fa35058fee5985b/7bfee/clive-barker.avif 130w,/static/5779e9401c86d1d76fa35058fee5985b/6c904/clive-barker.avif 162w,/static/5779e9401c86d1d76fa35058fee5985b/eba7c/clive-barker.avif 174w,/static/5779e9401c86d1d76fa35058fee5985b/fcfdf/clive-barker.avif 260w,/static/5779e9401c86d1d76fa35058fee5985b/ef9e4/clive-barker.avif 324w,/static/5779e9401c86d1d76fa35058fee5985b/51863/clive-barker.avif 348w"
            sizes="(max-width: 487) 174px,  (max-width: 1279px) 162px, (max-width: 1291px) 174px, 130px"
            type="image/avif"
          />
          <img
            alt="An image of Clive Barker"
            data-gatsby-image-ssr=""
            data-main-image=""
            data-src="/static/5779e9401c86d1d76fa35058fee5985b/141a0/clive-barker.jpg"
            data-srcset="/static/5779e9401c86d1d76fa35058fee5985b/02079/clive-barker.jpg 130w,/static/5779e9401c86d1d76fa35058fee5985b/b488b/clive-barker.jpg 162w,/static/5779e9401c86d1d76fa35058fee5985b/141a0/clive-barker.jpg 174w,/static/5779e9401c86d1d76fa35058fee5985b/c8b07/clive-barker.jpg 260w,/static/5779e9401c86d1d76fa35058fee5985b/f85c2/clive-barker.jpg 324w,/static/5779e9401c86d1d76fa35058fee5985b/5aeb4/clive-barker.jpg 348w"
            decoding="async"
            loading="lazy"
            sizes="(max-width: 487) 174px,  (max-width: 1279px) 162px, (max-width: 1291px) 174px, 130px"
            style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
          />
        </picture>
        <noscript />
        <script
          type="module"
        >
          const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
        </script>
      </div>
    </a>
    <div
      class="listItemTitleCss"
    >
      <a
        href="/watchlist/writers/clive-barker/"
      >
        Clive Barker
      </a>
    </div>
    <a
      class="progressRingCss"
      href="/watchlist/writers/clive-barker/"
    >
      <svg
        viewBox="0 0 36 36"
      >
        <path
          class="percentBackgroundCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
        />
        <path
          class="percentProgressCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
          stroke-dasharray="16, 100"
        />
      </svg>
    </a>
    <div
      class="progressStatsCss"
    >
      2
       / 
      12
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <a
      class="listItemLinkCss"
      href="/watchlist/writers/leigh-brackett/"
    >
      <div
        class="gatsby-image-wrapper gatsby-image-wrapper-constrained listItemAvatarCss"
        data-gatsby-image-wrapper=""
        style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
      >
        <div
          style="max-width: 174px; display: block;"
        >
          <img
            alt=""
            aria-hidden="true"
            role="presentation"
            src="data:image/svg+xml;charset=utf-8,%3Csvg height='174' width='174' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
            style="max-width: 100%; display: block; position: static;"
          />
        </div>
        <img
          alt=""
          aria-hidden="true"
          data-placeholder-image=""
          decoding="async"
          src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='174'%20height='174'%20viewBox='0%200%20174%20174'%20preserveAspectRatio='none'%3e%3cpath%20d='M0%2087v87h30c29%200%2030%200%2029-2v-9l3-5c1-6%202-4%203%204l2%209%201%202%2019%201c20%200%2019%200%2019-4l6-9%206-7h-5c-12%202-16%201-23-8-4-5-5-6-7-5-4%201-11-11-9-15%202-2%202-3-2-7l-6-9-4-5c-1%200-3-5-3-10l1-4%201-1c0-2%201-1%204%200l4%202%204-2c3-2%205-3%208-3%204%200%205-1%204-2%200-3-6-3-14%201-7%203-10%203-6%200%203-2%203-2%201-5-1-1-2-2-3-1s-2%200-3-7l-3-10v-5l7-12%204-2c2-2%203-3%2012-3l5-1c1%200-1-5-4-8l-1-2-1-4%201-2v-2c-2-3-1-3%202-1%203%203%205%202%204-1-1-1%200-3%201-4l1-2%202-1c2%200%202%200%201%201-1%202-3%208-2%209l1%205v2c-1-2-4-3-4-1l4%204c4%204%205%204%2013%204%2010%201%2011%201%2016%209l5%206s2%204%202%209l5%2013c5%2012%207%2048%202%2057l-2%205%203%202c2%202%203%203%203%205l1%202%202%201c2%202%202%202-1%206-1%203-3%206-5%207l-2%205-2%202-2%203c0%201-1%203-3%203-2%202%200%202%2024%202h26V0H0v87M83%209l-3%202-2%202c-1%203-5%203-8%200-2-2-3-2-1%201l-4%202c-5%201-7%205-5%208%202%201%202%201%206-1l7-3%202-1h1l2-2c1-4%203-4%204-2%202%202%202%202%204-1l1-3v-1l-1-1-2-1-1%201m6%20102c-3%206-4%209-2%207%201-1%203-2%203-4l3-2%205%201c3%200%205%201%205%202l10-4-11-1-8-2c-3-2-3-2-5%203m5%2012l-7%201c-1-1-2%200-3%201-1%203-1%204%202%204%204%200%208%202%207%203%200%201%206%204%2010%204%205%200%206-2%202-3-4%200-6-2-3-2l1-1h-4c-3%200-6-3-5-4l11-2%204-1H94'%20fill='%23d3d3d3'%20fill-rule='evenodd'/%3e%3c/svg%3e"
          style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
        />
        <picture>
          <source
            data-srcset="/static/fdee0eb395441086c02be1d83329e6a0/7bfee/leigh-brackett.avif 130w,/static/fdee0eb395441086c02be1d83329e6a0/6c904/leigh-brackett.avif 162w,/static/fdee0eb395441086c02be1d83329e6a0/eba7c/leigh-brackett.avif 174w,/static/fdee0eb395441086c02be1d83329e6a0/fcfdf/leigh-brackett.avif 260w,/static/fdee0eb395441086c02be1d83329e6a0/ef9e4/leigh-brackett.avif 324w,/static/fdee0eb395441086c02be1d83329e6a0/51863/leigh-brackett.avif 348w"
            sizes="(max-width: 487) 174px,  (max-width: 1279px) 162px, (max-width: 1291px) 174px, 130px"
            type="image/avif"
          />
          <img
            alt="An image of Leigh Brackett"
            data-gatsby-image-ssr=""
            data-main-image=""
            data-src="/static/fdee0eb395441086c02be1d83329e6a0/141a0/leigh-brackett.jpg"
            data-srcset="/static/fdee0eb395441086c02be1d83329e6a0/02079/leigh-brackett.jpg 130w,/static/fdee0eb395441086c02be1d83329e6a0/b488b/leigh-brackett.jpg 162w,/static/fdee0eb395441086c02be1d83329e6a0/141a0/leigh-brackett.jpg 174w,/static/fdee0eb395441086c02be1d83329e6a0/c8b07/leigh-brackett.jpg 260w,/static/fdee0eb395441086c02be1d83329e6a0/f85c2/leigh-brackett.jpg 324w,/static/fdee0eb395441086c02be1d83329e6a0/5aeb4/leigh-brackett.jpg 348w"
            decoding="async"
            loading="lazy"
            sizes="(max-width: 487) 174px,  (max-width: 1279px) 162px, (max-width: 1291px) 174px, 130px"
            style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
          />
        </picture>
        <noscript />
        <script
          type="module"
        >
          const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
        </script>
      </div>
    </a>
    <div
      class="listItemTitleCss"
    >
      <a
        href="/watchlist/writers/leigh-brackett/"
      >
        Leigh Brackett
      </a>
    </div>
    <a
      class="progressRingCss"
      href="/watchlist/writers/leigh-brackett/"
    >
      <svg
        viewBox="0 0 36 36"
      >
        <path
          class="percentBackgroundCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
        />
        <path
          class="percentProgressCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
          stroke-dasharray="8, 100"
        />
      </svg>
    </a>
    <div
      class="progressStatsCss"
    >
      1
       / 
      12
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <svg
      class="listItemAvatarCss defaultImageCss"
      fill="currentColor"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="listItemTitleCss"
    >
      Anthony Shaffer
    </div>
    <div
      class="progressRingCss"
    >
      <svg
        viewBox="0 0 36 36"
      >
        <path
          class="percentBackgroundCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
        />
        <path
          class="percentProgressCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
          stroke-dasharray="0, 100"
        />
      </svg>
    </div>
    <div
      class="progressStatsCss"
    >
      0
       / 
      12
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <svg
      class="listItemAvatarCss defaultImageCss"
      fill="currentColor"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="listItemTitleCss"
    >
      David Mamet
    </div>
    <div
      class="progressRingCss"
    >
      <svg
        viewBox="0 0 36 36"
      >
        <path
          class="percentBackgroundCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
        />
        <path
          class="percentProgressCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
          stroke-dasharray="0, 100"
        />
      </svg>
    </div>
    <div
      class="progressStatsCss"
    >
      0
       / 
      26
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <svg
      class="listItemAvatarCss defaultImageCss"
      fill="currentColor"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="listItemTitleCss"
    >
      Neil LaBute
    </div>
    <div
      class="progressRingCss"
    >
      <svg
        viewBox="0 0 36 36"
      >
        <path
          class="percentBackgroundCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
        />
        <path
          class="percentProgressCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
          stroke-dasharray="0, 100"
        />
      </svg>
    </div>
    <div
      class="progressStatsCss"
    >
      0
       / 
      10
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <svg
      class="listItemAvatarCss defaultImageCss"
      fill="currentColor"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="listItemTitleCss"
    >
      Raymond Chandler
    </div>
    <div
      class="progressRingCss"
    >
      <svg
        viewBox="0 0 36 36"
      >
        <path
          class="percentBackgroundCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
        />
        <path
          class="percentProgressCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
          stroke-dasharray="0, 100"
        />
      </svg>
    </div>
    <div
      class="progressStatsCss"
    >
      0
       / 
      15
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <svg
      class="listItemAvatarCss defaultImageCss"
      fill="currentColor"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="listItemTitleCss"
    >
      Stephen King
    </div>
    <div
      class="progressRingCss"
    >
      <svg
        viewBox="0 0 36 36"
      >
        <path
          class="percentBackgroundCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
        />
        <path
          class="percentProgressCss"
          d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
          stroke-dasharray="0, 100"
        />
      </svg>
    </div>
    <div
      class="progressStatsCss"
    >
      0
       / 
      57
    </div>
  </li>
</ul>
`;

exports[`/watchlist/writers) renders 1`] = `
<DocumentFragment>
  <a
    class="skipLinkCss"
    href="#content"
  >
    Skip to content
  </a>
  <div
    class="containerCss"
    id="top"
  >
    <header
      class="mastHeaderCss"
    >
      <h1
        class="mastTitleCss"
      >
        <a
          href="/"
        >
          Frank's Movie Log
        </a>
      </h1>
      <p
        class="mastTaglineCss"
      >
        My life at the movies.
      </p>
      <form
        accept-charset="UTF-8"
        action="https://www.google.com/search"
        class="mastSearchFormCss"
        method="get"
        role="search"
      >
        <label
          class="mastSearchWrapCss"
          for="search"
        >
          <div
            class="srOnlyCss"
          >
            Search
          </div>
          <input
            class="mastSearchInputCss"
            id="search"
            name="q"
            placeholder="Search..."
            type="text"
          />
          <input
            name="q"
            type="hidden"
            value="site:www.franksmovielog.com"
          />
          <button
            aria-label="Search"
            class="mastSearchSubmitCss"
            type="submit"
            value="Search"
          >
            <svg
              class="iconCss "
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z"
                fill-rule="evenodd"
              />
              <path
                d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </label>
      </form>
      <nav
        class="mastNavCss"
      >
        <ul
          class="mastNavListCss"
        >
          <li
            class="mastNavListItemCss"
          >
            <a
              class="mastNavLinkCss"
              href="/"
            >
              Home
            </a>
          </li>
          <li
            class="mastNavListItemCss"
          >
            <a
              class="mastNavLinkCss"
              href="/about/"
            >
              About
            </a>
          </li>
          <li
            class="mastNavListItemCss"
          >
            <a
              class="mastNavLinkCss"
              href="/how-i-grade/"
            >
              How I Grade
            </a>
          </li>
          <li
            class="mastNavListItemCss"
          >
            <a
              class="mastNavLinkCss"
              href="/reviews/"
            >
              All Reviews
            </a>
          </li>
          <li
            class="mastNavListItemCss"
          >
            <a
              class="mastNavLinkCss"
              href="/viewings/"
            >
              Viewing Log
            </a>
          </li>
          <li
            class="mastNavListItemCss"
          >
            <a
              class="mastNavLinkCss"
              href="/watchlist/"
            >
              Watchlist
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <div
      class="childrenCss"
      id="content"
    >
      <main
        class="containerCss"
      >
        <div
          class="leftCss"
        >
          <header
            class="pageHeaderCss"
          >
            <h2
              class="headingCss"
            >
              <span
                class="pageHeaderSubCss"
              >
                Watchlist
              </span>
               Writers
            </h2>
            <p
              class="taglineCss"
            >
              It's not a lie. It's a gift for fiction.
            </p>
          </header>
          <fieldset
            class="fieldsetCss filtersCss"
          >
            <legend>
              Filter & Sort
            </legend>
            <label
              class="labelCss"
              for="watchlist-type-name-input"
            >
              Name
              <input
                class="inputCss "
                id="watchlist-type-name-input"
                placeholder="Enter all or part of a name"
                type="text"
              />
            </label>
            <label
              class="labelCss"
              for="watchlist-type-sort-input"
            >
              Order By
              <select
                class="selectInputCss "
                id="watchlist-type-sort-input"
              >
                <option
                  value="name"
                >
                  Name
                </option>
                <option
                  value="reviews"
                >
                  Review Count
                </option>
              </select>
            </label>
          </fieldset>
        </div>
        <div
          class="rightCss"
        >
          <ul
            class="listCss"
            data-testid="writers-list"
          >
            <li
              class="listItemCss"
            >
              <svg
                class="listItemAvatarCss defaultImageCss"
                fill="currentColor"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
                  fill-rule="evenodd"
                />
              </svg>
              <div
                class="listItemTitleCss"
              >
                Anthony Shaffer
              </div>
              <div
                class="progressRingCss"
              >
                <svg
                  viewBox="0 0 36 36"
                >
                  <path
                    class="percentBackgroundCss"
                    d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
                  />
                  <path
                    class="percentProgressCss"
                    d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
                    stroke-dasharray="0, 100"
                  />
                </svg>
              </div>
              <div
                class="progressStatsCss"
              >
                0 / 12
              </div>
            </li>
            <li
              class="listItemCss"
            >
              <a
                class="listItemLinkCss"
                href="/watchlist/writers/clive-barker/"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained listItemAvatarCss"
                  data-gatsby-image-wrapper=""
                  style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
                >
                  <div
                    style="max-width: 174px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='174' width='174' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <img
                    alt=""
                    aria-hidden="true"
                    data-placeholder-image=""
                    decoding="async"
                    src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='174'%20height='174'%20viewBox='0%200%20174%20174'%20preserveAspectRatio='none'%3e%3cpath%20d='M0%2087v87h175V87c0-48-1-69-1-45v42l-4%202c-4%204-8%2010-8%2013l-2%2014a278%20278%200%2000-6%2033l-6-1c-5-1-7-1-12%201-1%201-3%200-6-5l-5-6-2%204-3%203-6%204c-6%204-6%204-11%201-5-2-5-2-5%200%200%204-4%202-7-5-3-5-1-6%205-5%205%200%206-2%202-4l-1-1c2%200%201-2-1-2v-1c2%200%202%200%201-1-1-2%208-5%2012-4h2c-1-1-7-2-9-1-1%201-8-1-8-2l4-6%205-4-3-5-2-11c0-7-2-14-6-18-3-3-16-7-19-6-2%200-3%200-3-5s1-7%203-3l2%201c2%200%202%200%201-2v-4l-1-1c-1%200-2-1-1-2h-1l-1%201c-1-6%200-8%201-10l1-3c-3-4%2012-8%2026-8%2019%201%2026%209%2028%2032%201%2018%203%2024%204%2020l2-2%203-4c1-4%202-5%204-5s3-2%202-4c-2-2-2-7-1-14V48l-2-9%201-1c-1-3%200-2%204%201%201%202%203%203%203%202l1%201h1c1-2%201-2%202%200v9c1%202%202%201%202-6%201-4%203-9%206-11%202-1%202-2%202-6-1-5-1-5-7-2l-8%203-5%202-3%202-4-3-7-6-7-4c-3%200-4-1-4-2%200-2-2-3-4-4-5-3-5-3%203-3l34-2h13l1-3c4-7%207-6-45-6a9172%209172%200%2000-84%200H0v87m112-16l-6%203c-2%201-2%201%200%202%202%200%202%201%201%203%200%202%200%202%203%201h3c3%200%204%200%203%201%200%202%205%203%206%202%202-1-1-6-4-8-2-1-2-1%202-1l5-1-4-1c-4-2-4-2-9-1M75%2083c-2%201-1%207%201%208%201%201%201%201-1%201-4%200-6%209-3%2011l3%207%201%206c1-1%204%203%205%206%200%204%202%203%202-2-1-2%200-3%201-3%203%201%205-2%203-4v-8c1-13%201-17-1-19-1-1-2-2-3-1-1%202-4%201-4-1s-2-3-4-1m-48%2034c-1%201-5%202-14%202-5%200-12%2012-9%2014l4%208c9%2020%2020%2028%2032%2022l8-2c4%200%204%200%200-7l-4-15c-1-10-3-16-6-17l-4-3c-3-3-5-4-7-2m29%209a283%20283%200%20001%209v6l1%201-1%201v1l-1%201h-1l1%202v2c-2%201%201%203%204%203%204%200%204%200%201-14l-4-14h-1v2'%20fill='%23d3d3d3'%20fill-rule='evenodd'/%3e%3c/svg%3e"
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="/static/5779e9401c86d1d76fa35058fee5985b/7bfee/clive-barker.avif 130w,/static/5779e9401c86d1d76fa35058fee5985b/6c904/clive-barker.avif 162w,/static/5779e9401c86d1d76fa35058fee5985b/eba7c/clive-barker.avif 174w,/static/5779e9401c86d1d76fa35058fee5985b/fcfdf/clive-barker.avif 260w,/static/5779e9401c86d1d76fa35058fee5985b/ef9e4/clive-barker.avif 324w,/static/5779e9401c86d1d76fa35058fee5985b/51863/clive-barker.avif 348w"
                      sizes="(max-width: 487) 174px,  (max-width: 1279px) 162px, (max-width: 1291px) 174px, 130px"
                      type="image/avif"
                    />
                    <img
                      alt="An image of Clive Barker"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="/static/5779e9401c86d1d76fa35058fee5985b/141a0/clive-barker.jpg"
                      data-srcset="/static/5779e9401c86d1d76fa35058fee5985b/02079/clive-barker.jpg 130w,/static/5779e9401c86d1d76fa35058fee5985b/b488b/clive-barker.jpg 162w,/static/5779e9401c86d1d76fa35058fee5985b/141a0/clive-barker.jpg 174w,/static/5779e9401c86d1d76fa35058fee5985b/c8b07/clive-barker.jpg 260w,/static/5779e9401c86d1d76fa35058fee5985b/f85c2/clive-barker.jpg 324w,/static/5779e9401c86d1d76fa35058fee5985b/5aeb4/clive-barker.jpg 348w"
                      decoding="async"
                      loading="lazy"
                      sizes="(max-width: 487) 174px,  (max-width: 1279px) 162px, (max-width: 1291px) 174px, 130px"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
              </a>
              <div
                class="listItemTitleCss"
              >
                <a
                  href="/watchlist/writers/clive-barker/"
                >
                  Clive Barker
                </a>
              </div>
              <a
                class="progressRingCss"
                href="/watchlist/writers/clive-barker/"
              >
                <svg
                  viewBox="0 0 36 36"
                >
                  <path
                    class="percentBackgroundCss"
                    d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
                  />
                  <path
                    class="percentProgressCss"
                    d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
                    stroke-dasharray="16, 100"
                  />
                </svg>
              </a>
              <div
                class="progressStatsCss"
              >
                2 / 12
              </div>
            </li>
            <li
              class="listItemCss"
            >
              <svg
                class="listItemAvatarCss defaultImageCss"
                fill="currentColor"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
                  fill-rule="evenodd"
                />
              </svg>
              <div
                class="listItemTitleCss"
              >
                David Mamet
              </div>
              <div
                class="progressRingCss"
              >
                <svg
                  viewBox="0 0 36 36"
                >
                  <path
                    class="percentBackgroundCss"
                    d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
                  />
                  <path
                    class="percentProgressCss"
                    d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
                    stroke-dasharray="0, 100"
                  />
                </svg>
              </div>
              <div
                class="progressStatsCss"
              >
                0 / 26
              </div>
            </li>
            <li
              class="listItemCss"
            >
              <a
                class="listItemLinkCss"
                href="/watchlist/writers/leigh-brackett/"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained listItemAvatarCss"
                  data-gatsby-image-wrapper=""
                  style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
                >
                  <div
                    style="max-width: 174px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='174' width='174' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <img
                    alt=""
                    aria-hidden="true"
                    data-placeholder-image=""
                    decoding="async"
                    src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='174'%20height='174'%20viewBox='0%200%20174%20174'%20preserveAspectRatio='none'%3e%3cpath%20d='M0%2087v87h30c29%200%2030%200%2029-2v-9l3-5c1-6%202-4%203%204l2%209%201%202%2019%201c20%200%2019%200%2019-4l6-9%206-7h-5c-12%202-16%201-23-8-4-5-5-6-7-5-4%201-11-11-9-15%202-2%202-3-2-7l-6-9-4-5c-1%200-3-5-3-10l1-4%201-1c0-2%201-1%204%200l4%202%204-2c3-2%205-3%208-3%204%200%205-1%204-2%200-3-6-3-14%201-7%203-10%203-6%200%203-2%203-2%201-5-1-1-2-2-3-1s-2%200-3-7l-3-10v-5l7-12%204-2c2-2%203-3%2012-3l5-1c1%200-1-5-4-8l-1-2-1-4%201-2v-2c-2-3-1-3%202-1%203%203%205%202%204-1-1-1%200-3%201-4l1-2%202-1c2%200%202%200%201%201-1%202-3%208-2%209l1%205v2c-1-2-4-3-4-1l4%204c4%204%205%204%2013%204%2010%201%2011%201%2016%209l5%206s2%204%202%209l5%2013c5%2012%207%2048%202%2057l-2%205%203%202c2%202%203%203%203%205l1%202%202%201c2%202%202%202-1%206-1%203-3%206-5%207l-2%205-2%202-2%203c0%201-1%203-3%203-2%202%200%202%2024%202h26V0H0v87M83%209l-3%202-2%202c-1%203-5%203-8%200-2-2-3-2-1%201l-4%202c-5%201-7%205-5%208%202%201%202%201%206-1l7-3%202-1h1l2-2c1-4%203-4%204-2%202%202%202%202%204-1l1-3v-1l-1-1-2-1-1%201m6%20102c-3%206-4%209-2%207%201-1%203-2%203-4l3-2%205%201c3%200%205%201%205%202l10-4-11-1-8-2c-3-2-3-2-5%203m5%2012l-7%201c-1-1-2%200-3%201-1%203-1%204%202%204%204%200%208%202%207%203%200%201%206%204%2010%204%205%200%206-2%202-3-4%200-6-2-3-2l1-1h-4c-3%200-6-3-5-4l11-2%204-1H94'%20fill='%23d3d3d3'%20fill-rule='evenodd'/%3e%3c/svg%3e"
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="/static/fdee0eb395441086c02be1d83329e6a0/7bfee/leigh-brackett.avif 130w,/static/fdee0eb395441086c02be1d83329e6a0/6c904/leigh-brackett.avif 162w,/static/fdee0eb395441086c02be1d83329e6a0/eba7c/leigh-brackett.avif 174w,/static/fdee0eb395441086c02be1d83329e6a0/fcfdf/leigh-brackett.avif 260w,/static/fdee0eb395441086c02be1d83329e6a0/ef9e4/leigh-brackett.avif 324w,/static/fdee0eb395441086c02be1d83329e6a0/51863/leigh-brackett.avif 348w"
                      sizes="(max-width: 487) 174px,  (max-width: 1279px) 162px, (max-width: 1291px) 174px, 130px"
                      type="image/avif"
                    />
                    <img
                      alt="An image of Leigh Brackett"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="/static/fdee0eb395441086c02be1d83329e6a0/141a0/leigh-brackett.jpg"
                      data-srcset="/static/fdee0eb395441086c02be1d83329e6a0/02079/leigh-brackett.jpg 130w,/static/fdee0eb395441086c02be1d83329e6a0/b488b/leigh-brackett.jpg 162w,/static/fdee0eb395441086c02be1d83329e6a0/141a0/leigh-brackett.jpg 174w,/static/fdee0eb395441086c02be1d83329e6a0/c8b07/leigh-brackett.jpg 260w,/static/fdee0eb395441086c02be1d83329e6a0/f85c2/leigh-brackett.jpg 324w,/static/fdee0eb395441086c02be1d83329e6a0/5aeb4/leigh-brackett.jpg 348w"
                      decoding="async"
                      loading="lazy"
                      sizes="(max-width: 487) 174px,  (max-width: 1279px) 162px, (max-width: 1291px) 174px, 130px"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
              </a>
              <div
                class="listItemTitleCss"
              >
                <a
                  href="/watchlist/writers/leigh-brackett/"
                >
                  Leigh Brackett
                </a>
              </div>
              <a
                class="progressRingCss"
                href="/watchlist/writers/leigh-brackett/"
              >
                <svg
                  viewBox="0 0 36 36"
                >
                  <path
                    class="percentBackgroundCss"
                    d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
                  />
                  <path
                    class="percentProgressCss"
                    d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
                    stroke-dasharray="8, 100"
                  />
                </svg>
              </a>
              <div
                class="progressStatsCss"
              >
                1 / 12
              </div>
            </li>
            <li
              class="listItemCss"
            >
              <svg
                class="listItemAvatarCss defaultImageCss"
                fill="currentColor"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
                  fill-rule="evenodd"
                />
              </svg>
              <div
                class="listItemTitleCss"
              >
                Neil LaBute
              </div>
              <div
                class="progressRingCss"
              >
                <svg
                  viewBox="0 0 36 36"
                >
                  <path
                    class="percentBackgroundCss"
                    d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
                  />
                  <path
                    class="percentProgressCss"
                    d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
                    stroke-dasharray="0, 100"
                  />
                </svg>
              </div>
              <div
                class="progressStatsCss"
              >
                0 / 10
              </div>
            </li>
            <li
              class="listItemCss"
            >
              <svg
                class="listItemAvatarCss defaultImageCss"
                fill="currentColor"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
                  fill-rule="evenodd"
                />
              </svg>
              <div
                class="listItemTitleCss"
              >
                Raymond Chandler
              </div>
              <div
                class="progressRingCss"
              >
                <svg
                  viewBox="0 0 36 36"
                >
                  <path
                    class="percentBackgroundCss"
                    d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
                  />
                  <path
                    class="percentProgressCss"
                    d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
                    stroke-dasharray="0, 100"
                  />
                </svg>
              </div>
              <div
                class="progressStatsCss"
              >
                0 / 15
              </div>
            </li>
            <li
              class="listItemCss"
            >
              <svg
                class="listItemAvatarCss defaultImageCss"
                fill="currentColor"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
                  fill-rule="evenodd"
                />
              </svg>
              <div
                class="listItemTitleCss"
              >
                Stephen King
              </div>
              <div
                class="progressRingCss"
              >
                <svg
                  viewBox="0 0 36 36"
                >
                  <path
                    class="percentBackgroundCss"
                    d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
                  />
                  <path
                    class="percentProgressCss"
                    d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"
                    stroke-dasharray="0, 100"
                  />
                </svg>
              </div>
              <div
                class="progressStatsCss"
              >
                0 / 57
              </div>
            </li>
          </ul>
        </div>
      </main>
    </div>
    <footer
      class="footerCss"
    >
      <ul
        class="footerNavListCss"
      >
        <li
          class="footerNavListItemCss"
        >
          <a
            href="/"
          >
            Home
          </a>
        </li>
        <li
          class="footerNavListItemCss"
        >
          <a
            href="/about/"
          >
            About
          </a>
        </li>
        <li
          class="footerNavListItemCss"
        >
          <a
            href="/how-i-grade/"
          >
            How I Grade
          </a>
        </li>
        <li
          class="footerNavListItemCss"
        >
          <a
            href="/reviews/"
          >
            All Reviews
          </a>
        </li>
        <li
          class="footerNavListItemCss"
        >
          <a
            href="/viewings/"
          >
            Viewing Log
          </a>
        </li>
        <li
          class="footerNavListItemCss"
        >
          <a
            href="/watchlist/"
          >
            Watchlist
          </a>
        </li>
      </ul>
      <p
        class="footerFairUseCss"
      >
        All stills used in accordance with the 
        <a
          href="http://www.copyright.gov/title17/92chap1.html#107"
        >
          Fair Use Law.
        </a>
      </p>
      <div
        class="srOnlyCss"
      >
        <a
          href="#top"
        >
          To the top ↑
        </a>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
